[project]
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# E/W = pycodestyle, F = pyflakes, I = isort, N = pep8-naming, UP = pyupgrade

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = true
exclude = ["migrations"]

[[tool.mypy.overrides]]
module = "health.tests"
disallow_untyped_defs = false

[tool.django-stubs]
django_settings_module = "nulldb.settings"
